Overflow Fixed on landscape mode

--- a/index.css
+++ b/index.css
@@ -205,23 +205,25 @@ h1, p {
 .events {
 	display: flex;
 	flex-direction: row;
-	margin: 10px;
-	padding: 40px;
+	margin: 5px;
+	padding: 10px;
 	align-items: center;
-	justify-content: center;
     font-family: 'Open Sans', sans-serif;
     max-width: 100%;
 }
+.events-cells {
+    padding: 4%;
+    justify-content: space-evenly;
+}
 .events-cells h2 {
+    margin-top: 2rem;
 	color: black;
-	text-align: center;
+   text-align: center;
 }
 .events-cells img {
-          width: 300px;
-		  height: 300px;
-		  margin: 25px;
-		  box-shadow: 0 0 5px 5px black;
-		  transition: 0.4s;
+     width: 100%;
+	 box-shadow: 0 0 5px 5px black;
+	 transition: 0.4s;
 }
 .events-cells h2:hover {
 	color: rgb(255, 0, 0);
@@ -362,6 +364,9 @@ h1, p {
         margin-left: 10%;
         margin-right: 10%;
     }
+    .events-cells {
+        padding: 15%;
+    }
 }
 @media only screen and (min-width: 601px) and (max-width: 900px) and (orientation: landscape) {
     .layer {
@@ -386,6 +391,6 @@ h1, p {
     .end-box-text a {
         margin-top: 150px;
         
-    }
+    } 
    
 }
